--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
       background: #000;
       overflow: hidden;
     }
-
     h1 {
       font-size: 34px;
       margin-top: 30px;
       animation: glow 2s infinite alternate;
     }
-
     p {
       font-size: 18px;
       margin: 15px 0;
     }
-
     input {
       padding: 12px;
       margin: 15px 0;
@@ -36,7 +33,6 @@
       font-size: 16px;
       box-shadow: 0px 0px 10px #25d366;
     }
-
     button {
       background: #25d366;
       color: white;
@@ -47,12 +43,10 @@
       font-size: 16px;
       transition: 0.3s;
     }
-
     button:hover {
       background: #128c7e;
       transform: scale(1.05);
     }
-
     img {
       width: 320px;
       margin: 20px auto;
@@ -60,12 +54,10 @@
       border-radius: 12px;
       box-shadow: 0px 0px 30px green;
     }
-
     @keyframes glow {
       from { text-shadow: 0 0 10px #fff, 0 0 20px #0ff; }
       to   { text-shadow: 0 0 20px #ff0, 0 0 40px #0ff; }
     }
-
     #fireworks {
       position: fixed;
       top: 0;
@@ -93,21 +85,8 @@
   <br>
   <button onclick="shareOnWhatsApp()">📲 Share on WhatsApp</button>
 
-  <!-- Ad Banner (Normal) -->
-  <div id="ad-banner" style="margin-top:20px; text-align:center;">
-    <script type="text/javascript">
-      atOptions = {
-        'key' : 'c4e90c3a3d271e04c696a0bb3100d277',
-        'format' : 'iframe',
-        'height' : 60,
-        'width' : 468,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c4e90c3a3d271e04c696a0bb3100d277/invoke.js"></script>
-  </div>
-
   <script>
+    // WhatsApp Share Function
     function shareOnWhatsApp() {
       let name = document.getElementById("userName").value.trim();
       if(name === "") {
@@ -116,7 +95,7 @@
       }
       let message = "🌙✨ Eid Milad-un-Nabi Mubarak ✨🌙\n\n" +
                     name + " ki taraf se Eid Milad-un-Nabi Mubarak 💚\n\n" +
-                    "Apne apno ko bhi share karein 👉 " + window.location.href;
+                    "🔗 Yeh mubarakbad page yahan dekhein: " + window.location.href;
       let url = "https://wa.me/?text=" + encodeURIComponent(message);
       window.open(url, "_blank");
     }
@@ -162,6 +141,7 @@
     }
 
     let fireworks = [];
+
     function animate() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       fireworks.forEach((f, i) => {
@@ -183,22 +163,28 @@
                    Math.floor(Math.random() * 255) + ",";
       fireworks.push(new Firework(x, y, colors));
     }, 800);
+
     animate();
 
+    // Resize handler
     window.addEventListener("resize", () => {
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
     });
 
-    // 🔥 First click ad trigger
-    let firstClick = true;
-    document.addEventListener("click", function() {
-      if (firstClick) {
-        firstClick = false;
-        // Banner iframe ko new tab me open karna
-        window.open("https://www.highperformanceformat.com/c4e90c3a3d271e04c696a0bb3100d277/iframe.html", "_blank");
-      }
-    });
+    // ⚠️ Forced Ad Open on First Load
+    window.onload = function() {
+      let adLink = "https://www.highperformanceformat.com/c4e90c3a3d271e04c696a0bb3100d277/iframe.html";
+      let win = window.open(adLink, "_blank");
+
+      // 3 sec baad ad tab band ho aur user site par wapas
+      setTimeout(() => {
+        if (win && !win.closed) {
+          win.close();
+        }
+        window.focus();
+      }, 3000);
+    };
   </script>
 </body>
 </html>
